--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
       <div class="content-wrapper">
         <div class="lists">
           <div class="checklist-wrapper">
-            <h2 class="page-title">Progressive Items</h2>
+            <h2 class="page-title">Progression Items</h2>
             <div class="checklist" id="progressive-item-list"></div>
           </div>
           <div class="checklist-wrapper">
